--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,6 @@
-@use 'global';
-@use 'fonts';
+@use "normalize";
+@use "global";
+@use "fonts";
+@use "UILayout";
+@use "pageUIColors";
+@import "../components/Button/button.scss";
