--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,1 @@
-doctype html
-html(lang='en')
-  include Components/Header/header
-  body
-    .container
-      h1 Hello world
-      h2.container__subtitle
-        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat numquam ducimus officia illum officiis, aperiam eveniet. Nulla quia mollitia, modi laboriosam ad culpa, libero ducimus adipisci dolor dolorem earum.
-      .block
+include pages/colorsAndType.pug
