--- a/src/pages/startPage/startPage.pug
+++ b/src/pages/startPage/startPage.pug
@@ -5,8 +5,8 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
-  body
-    div.layout__header
-      img(src=require('./images/LogoUI.png'))
-    div.layout__content
-      block content
+  body 
+    - const links = ['colorsAndType']
+    for link in links
+      li
+        a(href=`./${link}.html`)= link
