--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,10 +1,10 @@
-$dark100: #1F2041;
+$dark100: #1f2041;
 $dark75: rgba(31, 32, 65, 0.75);
 $dark50: rgba(31, 32, 65, 0.5);
 $dark25: rgba(31, 32, 65, 0.25);
 $dark5: rgba(31, 32, 65, 0.05);
-$purple: #BC9CFF;
-$green: #6FCF97;
+$purple: #bc9cff;
+$green: #6fcf97;
 
 * {
   box-sizing: border-box;
@@ -24,13 +24,13 @@ h1 {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: 700;
   font-size: 24px;
-  line-height: 29px
+  line-height: 29px;
 }
 
 h2 {
   font-weight: 700;
   font-size: 19px;
-  line-height: 23px
+  line-height: 23px;
 }
 
 h3 {
