--- a/src/components/Button/button.pug
+++ b/src/components/Button/button.pug
@@ -1,6 +1,11 @@
 mixin button(props)
-  - const { title = "button", type = "default", arrow = false } = props;
-  if (arrow === false)
-    button(class=`button button__${type}`, type="button")= title
+  - const { title = "button", type = "default", arrow = false, visible = true, data = "" } = props;
+  if (arrow === true && type === 'big')
+    button.button(class=`button__${type} material-icons md-24`, type="button")= title
+    span.material-icons.md-24.button__arrow &#xe5c8;
   else
-    button(class=`button button__${type}`, type="button")= `${title}`
+    button.button(
+      class=visible ? `button__${type}` : `button__${type} button__none`,
+      type="button",
+      data-button=data
+    )= title
