--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -1,10 +1,15 @@
 @import '../../styles/global';
 
 .textField {
+  position: relative;
   margin-bottom: 10px;
+
   &__top {
     display: flex;
     justify-content: space-between;
+    &--arrow {
+      width: 266px;
+    }
   }
 
   &__title {
@@ -39,5 +44,14 @@
       border: 1px solid $dark50;
       outline: none;
     }
+    &--arrow {
+      width: 266px;
+    }
+  }
+  &__arrow {
+    position: absolute;
+    top: 34px;
+    right: 63px;
+    color: $purple;
   }
 }
