--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -6,10 +6,10 @@ include ../../components/dropdown/dropdown.pug
 block content
   section.formElements
     .formElements__firstColumn
-      +textField({title: 'Text field', description: 'default', placeholder: 'Email', styles: 'margin-bottom: 17px'})
+      +textField({title: 'Text field', description: 'default', placeholder: 'Email', styles: 'margin-bottom: 17px', arrow: true})
       +textField({title: 'Text field', description: 'hover / focus', placeholder: 'Email', value: 'This is pretty awesome'})
-      +dropdown({uniqId: 'first', title: 'dropdown', text: 'Сколько гостей'})
-      +dropdown({uniqId: 'second', title: 'dropdown', text: 'Сколько гостей'})
+      +dropdown({uniqId: 'first', title: 'dropdown', description: 'hover', text: 'Сколько гостей'})
+      +dropdown({uniqId: 'second', title: 'dropdown', description: 'hover', text: '2 спальни, 2 кровати, 3 ванныые комнаты', type: 'furniture'})
     .formElements__secondColumn
       +button({title: 'click me'})
       +button({title: 'click me'})
