--- a/src/components/filterDateDropdown/filterDateDropdown.scss
+++ b/src/components/filterDateDropdown/filterDateDropdown.scss
@@ -1,33 +1,16 @@
 @import '../../styles/global';
 
-.textField {
+.filterDateDropdown {
   position: relative;
-  margin-bottom: 10px;
-
-  &__top {
-    display: flex;
-    justify-content: space-between;
-    &--arrow {
-      width: 266px;
-    }
-  }
-
+  width: 266px;
   &__title {
     font-weight: 700;
     font-size: 12px;
     color: $dark100;
     text-transform: uppercase;
   }
-
-  &__description {
-    font-weight: 400;
-    font-size: 12px;
-    color: $dark50;
-    text-transform: uppercase;
-  }
-
   &__input {
-    width: 320px;
+    width: 266px;
     height: 44px;
     border: 1px solid $dark25;
     border-radius: 4px;
@@ -35,24 +18,30 @@
     padding-right: 40px;
     font-size: 14px;
     color: $dark75;
+    cursor: pointer;
     &::placeholder {
       font-weight: 400;
       font-size: 14px;
-      color: $dark25;
+      color: $dark75;
     }
     &:hover,
     &:focus {
       border: 1px solid $dark50;
       outline: none;
     }
-    &--arrow {
-      width: 266px;
-    }
   }
   &__arrow {
     position: absolute;
-    top: 34px;
-    right: 63px;
-    color: $purple;
+    top: 37px;
+    right: 10px;
+    cursor: pointer;
+  }
+
+  &__close {
+    display: none;
+  }
+
+  &__dateOpen {
+    display: block;
   }
 }
