--- a/src/components/textField/textField.pug
+++ b/src/components/textField/textField.pug
@@ -1,9 +1,15 @@
 mixin textField(props)
-  - const { title = "Default", description = "", placeholder = "", value = "", styles = "", arrow = false } = props;
+  - const { title = "Default", description = "", placeholder = "", value = "", styles = "", arrow = false, readonly = false, mask = false } = props;
   .textField(style=`${styles}`) 
     .textField__top(class=!arrow ? "" : "textField__top--arrow") 
       span.textField__title= title
       span.textField__description= description
-    input.textField__input(class=!arrow ? "" : "textField__input--arrow", placeholder=placeholder, value=value)
+    input.textField__input(
+      class=!arrow ? "" : "textField__input--arrow",
+      placeholder=placeholder,
+      value=valuem,
+      readonly=readonly,
+      date-masked=mask ? "masked" : "simple"
+    )
     if arrow === true
       span.material-icons.md-24.textField__arrow &#xe5c8;
