--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -4,16 +4,19 @@ include ../../components/button/button.pug
 include ../../components/dropdown/dropdown.pug
 include ../../components/airDatePicker/airDatePicker.pug
 include ../../components/filterDateDropdown/filterDateDropdown.pug
+include ../../components/dateDropdown/dateDropdown.pug
 
 block content
   section.formElements
     .formElements__firstColumn
       +textField({title: 'Text field', description: 'default', placeholder: 'Email', styles: 'margin-bottom: 17px', arrow: true})
       +textField({title: 'Text field', description: 'hover / focus', placeholder: 'Email', value: 'This is pretty awesome'})
+      +textField({title: 'Text field', description: 'hover / focus', placeholder: 'Email', value: 'This is pretty awesome', arrow: false, readonly: false , mask: true})
       +dropdown({uniqId: 'first', title: 'dropdown', description: 'hover', text: 'Сколько гостей'})
       +dropdown({uniqId: 'second', title: 'dropdown', description: 'hover', text: '2 спальни, 2 кровати, 3 ванныые комнаты', type: 'furniture'})
       //- +airDatePicker({uniqId: 'filterDateDropdown'})
       +filterDateDropdown({uniqId: 'sadSADsadSAD'})
+      +dateDropdown({uniqId: 'asdsadsadsadsada2'})
     .formElements__secondColumn
       +button({title: 'click me'})
       +button({title: 'click me'})
