Updated textField, added the ability to add classes, added a wrapper for input. Refactored code to dropdown.js, added mixin textField in dropdown.pug

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,4 +1,5 @@
 include ../button/button.pug
+include ../textField/textField.pug
 
 mixin dropdown(props)
   -
@@ -7,17 +8,20 @@ mixin dropdown(props)
     const listFurniture = ['спальни', 'кровати', 'ванные комнаты']
     const list = type === 'guests' ? listGuests : listFurniture
   .dropdown(data-type=`${uniqId}-${type}`)
-    div(class=type === "guests" ? "dropdown__topInfo" : "dropdown__topInfo--furniture")
-      span.dropdown__title= title
-      span.dropdown__description= description
-    .dropdown__main(class=type === "guests" ? "" : "dropdown__furnituremain", data-dropdown=uniqId)
-      input.dropdown__field(
-        class=type === "guests" ? "" : "dropdown__furniture",
-        value=text.length < 20 ? text : text.slice(0, 20) + "...",
-        readonly,
-        data-dropdown-input=uniqId
-      )
-      .material-icons.md-24.dropdown__arrow &#xe5cf;
+    +textField({id: uniqId, title: 'Dropdown2', description: 'default', value: '', placeholder: 'Сколько гостей', readonly: true, classNames: 'dropdown__main', styles: 'margin-bottom: 17px', dropdown: true})
+    //- +textField({id: uniqId, title: 'Dropdown3', description: 'hover / focus', placeholder: 'Email', readonly: true, value: 'This is pretty awesome', classNames: 'dropdown__main', dropdown: true})
+    .material-icons.md-24.dropdown__arrow &#xe5cf;
+    //- div(class=type === "guests" ? "dropdown__topInfo" : "dropdown__topInfo--furniture")
+    //-   span.dropdown__title= title
+    //-   span.dropdown__description= description
+    //- .dropdown__main(class=type === "guests" ? "" : "dropdown__furnituremain", data-dropdown=uniqId)
+    //-   input.dropdown__field(
+    //-     class=type === "guests" ? "" : "dropdown__furniture",
+    //-     value=text.length < 20 ? text : text.slice(0, 20) + "...",
+    //-     readonly,
+    //-     data-dropdown-input=uniqId
+    //-   )
+    //-   .material-icons.md-24.dropdown__arrow &#xe5cf;
     div(
       class=type === "guests" ? `dropdown__bottomField dropdown__bottomField--none` : `dropdown__bottomField dropdown__furnitureField dropdown__bottomField--none`
     )
