--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -35,8 +35,8 @@
     justify-content: space-between;
     cursor: pointer;
     &--active {
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
     }
     &::placeholder {
       color: $dark75;
@@ -57,7 +57,7 @@
   }
   &__arrow {
     position: absolute;
-    top: 10px;
+    top: 33px;
     right: 10px;
     cursor: pointer;
   }
