--- a/src/components/textField/textField.pug
+++ b/src/components/textField/textField.pug
@@ -1,16 +1,17 @@
 mixin textField(props)
-  - const { id = "uniqIdTextField", title = "Default", description = "", placeholder = "", value = "", styles = "", arrow = false, readonly = false, mask = false } = props;
+  - const { id = "uniqIdTextField", title = "Default", description = "", placeholder = "", value = "", styles = "", classNames = "", arrow = false, readonly = false, mask = false, dropdown = false } = props;
   .textField(style=`${styles}`) 
     .textField__top(class=!arrow ? "" : "textField__top--arrow") 
       span.textField__title= title
       span.textField__description= description
-    input.textField__input(
-      class=!arrow ? "" : "textField__input--arrow",
-      placeholder=placeholder,
-      value=valuem,
-      readonly=readonly,
-      date-masked=mask ? "masked" : "simple",
-      id=uniqId
-    )
+    div(class=classNames, data-dropdown=dropdown ? id : false)
+      input.textField__input(
+        class=!arrow ? "" : "textField__input--arrow",
+        placeholder=placeholder,
+        value=value,
+        readonly=readonly,
+        date-masked=mask ? "masked" : "simple",
+        id=uniqId
+      )
     if arrow === true
       span.material-icons.md-24.textField__arrow &#xe5c8;
