--- a/src/components/dateDropdown/dateDropdown.scss
+++ b/src/components/dateDropdown/dateDropdown.scss
@@ -11,83 +11,36 @@
   }
 
   & .dateDropdownLeft {
+    position: relative;
     margin-right: 20px;
     &__main {
       position: relative;
-    }
-    &__title {
-      font-weight: 700;
-      font-size: 12px;
-      color: $dark100;
-      text-transform: uppercase;
-    }
-    &__input {
-      width: 150px;
-      height: 44px;
-      border: 1px solid $dark25;
-      border-radius: 4px;
-      padding-left: 15px;
-      padding-right: 40px;
-      font-size: 14px;
-      color: $dark75;
-      cursor: pointer;
-      &::placeholder {
-        font-weight: 400;
-        font-size: 14px;
-        color: $dark25;
-      }
-      &:hover,
-      &:focus {
-        border: 1px solid $dark50;
-        outline: none;
+      & .textField__input {
+        width: 150px;
       }
     }
-    &__arrow {
+    & .dateDropdown__arrow {
       position: absolute;
-      top: 12px;
+      top: 35px;
       left: 116px;
-      width: 266px;
-      cursor: pointer;
     }
   }
   & .dateDropdownRight {
+    position: relative;
     margin-right: 20px;
     &__main {
       position: relative;
-    }
-    &__title {
-      font-weight: 700;
-      font-size: 12px;
-      color: $dark100;
-      text-transform: uppercase;
-    }
-    &__input {
-      width: 150px;
-      height: 44px;
-      border: 1px solid $dark25;
-      border-radius: 4px;
-      padding-left: 15px;
-      padding-right: 40px;
-      font-size: 14px;
-      color: $dark75;
-      cursor: pointer;
-      &::placeholder {
-        font-weight: 400;
-        font-size: 14px;
-        color: $dark25;
-      }
-      &:hover,
-      &:focus {
-        border: 1px solid $dark50;
-        outline: none;
+      & .textField__input {
+        width: 150px;
       }
     }
-    &__arrow {
+    & .dateDropdown__arrow {
       position: absolute;
-      top: 12px;
+      top: 35px;
       left: 116px;
-      width: 266px;
-      cursor: pointer;
     }
+  }
+  &__arrow {
+    cursor: pointer;
   }
 }
