--- a/src/components/filterDateDropdown/filterDateDropdown.scss
+++ b/src/components/filterDateDropdown/filterDateDropdown.scss
@@ -3,31 +3,10 @@
 .filterDateDropdown {
   position: relative;
   width: 266px;
-  &__title {
-    font-weight: 700;
-    font-size: 12px;
-    color: $dark100;
-    text-transform: uppercase;
-  }
-  &__input {
+  &__main {
     width: 266px;
-    height: 44px;
-    border: 1px solid $dark25;
-    border-radius: 4px;
-    padding-left: 15px;
-    padding-right: 40px;
-    font-size: 14px;
-    color: $dark75;
-    cursor: pointer;
-    &::placeholder {
-      font-weight: 400;
-      font-size: 14px;
-      color: $dark75;
-    }
-    &:hover,
-    &:focus {
-      border: 1px solid $dark50;
-      outline: none;
+    & .textField__input {
+      width: 266px;
     }
   }
   &__arrow {
