Added radioButton component, fixed checkboxs arrow

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -9,6 +9,7 @@
     &:checked + label::before {
       background-image: url('../../images/Vector.png');
       background-repeat: no-repeat;
+      background-position: center center;
     }
   }
 
