--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -7,6 +7,7 @@ include ../../components/filterDateDropdown/filterDateDropdown.pug
 include ../../components/dateDropdown/dateDropdown.pug
 include ../../components/checkbox/checkbox.pug
 include ../../components/radioButton/radioButton.pug
+include ../../components/expandableCheckboxList/expandableCheckboxList.pug
 
 block content
   section.formElements
@@ -34,4 +35,5 @@ block content
       +checkbox({id: 'SuperIDcheckbox3', title: 'Можно пригласить гостей (до 10 человек)'})
       +radioButton({id: 'SuperIDcheckboxSS1', title:'Мужчина', name: 'checkboxed'})
       +radioButton({id: 'SuperIDcheckboxSS2', title: 'Женщина', name: 'checkboxed'})
+      +expandableCheckboxList({id: 'expandableCheckbox', title: 'expandable checkbox list'})
     .formElements__thirdColumn
