Added pagination component

--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -14,6 +14,7 @@ include ../../components/iconTextList/iconTextList.pug
 include ../../components/likeButton/likeButton.pug
 include ../../components/rateButton/rateButton.pug
 include ../../components/comment/comment.pug
+include ../../components/pagination/pagination.pug
 
 block content
   section.formElements
@@ -50,4 +51,5 @@ block content
       +likeButton({number: 12, clicked: true})
       +rateButton({size: 5})
       +comment({id: 'UniqIdComment1', title: 'Мурад Сарафанов', date: '5', photo: '../../images/photo.png', text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'})
+      +pagination({})
     .formElements__thirdColumn
