Added toggle component

--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -15,6 +15,7 @@ include ../../components/likeButton/likeButton.pug
 include ../../components/rateButton/rateButton.pug
 include ../../components/comment/comment.pug
 include ../../components/pagination/pagination.pug
+include ../../components/toggle/toggle.pug
 
 block content
   section.formElements
@@ -52,4 +53,5 @@ block content
       +rateButton({size: 5})
       +comment({id: 'UniqIdComment1', title: 'Мурад Сарафанов', date: '5', photo: '../../images/photo.png', text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'})
       +pagination({})
+      +toggle({text: 'Получать спецпредложения'})
     .formElements__thirdColumn
