Added grid to formElemnts page. Added cursor pointer to textfield, toggle, checkbox, radiobutton. Add logic for likebutton. Fixed expandable checkbox list, it rotated content. Add checked state to radiobutton component.

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -15,19 +15,17 @@
   &:hover {
     opacity: 0.5;
   }
+  &__wrapper {
+    position: relative;
+  }
   &__default {
-    background: linear-gradient(
-      180deg,
-      #bc9cff 0%,
-      #8ba4f9 100%
-    );
+    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     border: none;
     color: #ffffff;
   }
   &__white {
     background: linear-gradient(#fff, #fff) padding-box,
-      linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%)
-        border-box;
+      linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%) border-box;
     border: 2px solid transparent;
   }
   &__without {
@@ -46,17 +44,16 @@
   &__big {
     width: 320px;
     height: 44px;
-    background: linear-gradient(
-      180deg,
-      #bc9cff 0%,
-      #8ba4f9 100%
-    );
+    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     color: #ffffff;
     border: none;
   }
   &__arrow {
-    transform: translate(-34px, 8px);
-    color: #ffffff;
+    position: absolute;
+    top: 10px;
+    right: -44px;
+    color: #fff;
+    cursor: pointer;
   }
 
   &__none {
