--- a/src/components/dateDropdown/dateDropdown.pug
+++ b/src/components/dateDropdown/dateDropdown.pug
@@ -4,14 +4,14 @@ mixin dateDropdown({uniqId = 'uniqIdsQQ2', title ='date dropdown', placeholder =
   .dateDropdown
     .dateDropdownLeft
       +textField({id: uniqId, title: 'Dropdown2', description: 'default', value: '', placeholder: '19 авг - 23 авг', readonly: true, classNames: 'dateDropdownLeft__main', styles: 'margin-bottom: 17px', dropdown: true})
-      .material-icons.md-24.dateDropdown__arrow &#xe5cf;
+      //- .material-icons.md-24.dateDropdown__arrow &#xe5cf;
       //- span.dateDropdownLeft__title= title
       //- .dateDropdownLeft__main
       //-   input.dateDropdownLeft__input(value=placeholder, readonly)
       //-   .material-icons.md-24.dateDropdownLeft__arrow &#xe5cf;
     .dateDropdownRight
       +textField({id: uniqId, title: 'Dropdown2', description: 'default', value: '', placeholder: '19 авг - 23 авг', readonly: true, classNames: 'dateDropdownRight__main', styles: 'margin-bottom: 17px', dropdown: true})
-      .material-icons.md-24.dateDropdown__arrow &#xe5cf;
+      //- .material-icons.md-24.dateDropdown__arrow &#xe5cf;
       //- span.dateDropdownRight__title= title
       //- .dateDropdownRight__main
       //-   input.dateDropdownRight__input(value=placeholder, readonly)
