--- a/src/components/radioButton/radioButton.pug
+++ b/src/components/radioButton/radioButton.pug
@@ -1,4 +1,4 @@
-mixin radioButton({id = 'uniqIdQSQLKssS', title = '', name = 'name1'})
+mixin radioButton({id = 'uniqIdQSQLKssS', title = '', name = 'name1', checked = false})
   .radioButton
-    input.radioButton__input(type="radio", name=name, id=id)
+    input.radioButton__input(type="radio", name=name, id=id, checked=checked)
     label.radioButton__label(for=id)= title
