--- a/src/components/Button/button.pug
+++ b/src/components/Button/button.pug
@@ -1,8 +1,9 @@
 mixin button(props)
   - const { title = "button", type = "default", arrow = false, visible = true, data = "" } = props;
   if (arrow === true && type === 'big')
-    button.button(class=`button__${type} material-icons md-24`, type="button")= title
-    span.material-icons.md-24.button__arrow &#xe5c8;
+    .button__wrapper
+      button.button(class=`button__${type} `, type="button")= title
+      span.material-icons.md-24.button__arrow &#xe5c8;
   else
     button.button(
       class=visible ? `button__${type}` : `button__${type} button__none`,
