--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -18,6 +18,7 @@
     font-size: 14px;
     line-height: 18px;
     color: $dark50;
+    cursor: pointer;
     &::before {
       content: '';
       display: inline-block;
