--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -35,7 +35,7 @@
   }
   &__arrow {
     position: absolute;
-    top: 33px;
+    top: 10px;
     right: 10px;
     cursor: pointer;
   }
@@ -101,5 +101,8 @@
 
   &__furniture {
     width: 266px;
+  }
+  &__main {
+    position: relative;
   }
 }
