--- a/src/components/likeButton/likeButton.scss
+++ b/src/components/likeButton/likeButton.scss
@@ -4,14 +4,21 @@
   height: 20px;
   border: 1px solid $dark25;
   border-radius: 10px;
+  cursor: pointer;
+  &__clicked {
+    border: 1px solid #bc9cff;
+    & .likeButton__icon {
+      font-size: 10px;
+      color: #bc9cff;
+    }
+    & .likeButton__number {
+      color: #bc9cff;
+    }
+  }
   &__icon {
     font-size: 10px;
     color: $dark25;
     transform: translate(5px, -3px);
-    &--clicked {
-      font-size: 10px;
-      color: #bc9cff;
-    }
   }
   &__number {
     display: inline-block;
@@ -19,8 +26,5 @@
     font-size: 10px;
     color: $dark25;
     transform: translate(11px, -5px);
-    &--clicked {
-      color: #bc9cff;
-    }
   }
 }
