--- a/src/components/radioButton/radioButton.scss
+++ b/src/components/radioButton/radioButton.scss
@@ -23,6 +23,7 @@
     font-size: 14px;
     line-height: 24px;
     color: $dark50;
+    cursor: pointer;
     &::before {
       content: '';
       display: inline-block;
