Fixed toggle component. Now all toggle work on one page.

--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -1,5 +1,5 @@
-mixin toggle({text = 'ssss'})
-  .toggle
+mixin toggle({id = 'uniqIdToggle', text = 'ssss'})
+  .toggle(data-toggle=id)
     .toggle__Block
       .toggle__Circle 
     .toggle__Text= text
