--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -40,8 +40,8 @@ block content
       +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
       +radioButton({id: 'radioButton1', title:'Мужчина', name: 'checkboxed', checked: true})
       +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
-      +toggle({text: 'Получать спецпредложения'})
-      +toggle({text: 'Получать спецпредложения'})
+      +toggle({id: 'toggle1', text: 'Получать спецпредложения'})
+      +toggle({id: 'toggle2', text: 'Получать спецпредложения'})
       +likeButton({number: 2, clicked: false})
       +likeButton({number: 12, clicked: true})
       +rateButton({id: 'rateButton1', size: 5})
